--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -4,8 +4,8 @@ events {
 
 http {
 
-    ssl_certificate /etc/letsencrypt/live/sapphirecdn.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/sapphirecdn.com/privkey.pem;
+    ssl_certificate certs/sapphirecdn.fullchain.pem;
+    ssl_certificate_key certs/sapphirecdn.privkey.pem;
     access_log access.log combined;
     error_log error.log error;
     server {
