--- a/deployment/synchronize_code.ansible.yaml
+++ b/deployment/synchronize_code.ansible.yaml
@@ -1,12 +1,8 @@
 ---
 - hosts: cdn-dashboard
   become: yes
+  name: Synchronize code
   tasks:
-    - name: Synchronize code
-      ansible.posix.synchronize:
-        src: /Users/nguyenquangminh/Desktop/PROJECT/solo-projects/cdn_dashboard/
-        dest: /home/nguyenquangminh/cdn_dashboard/
-
     - name: Pulling code from github
       ansible.builtin.git:
         repo: https://NguyenQuangMinh0504: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@github.com/NguyenQuangMinh0504/cdn_dashboard.git
