--- a/deployment/runserver.ansible.yaml
+++ b/deployment/runserver.ansible.yaml
@@ -6,4 +6,14 @@
     - name: Run openresty proxy server
       ansible.builtin.command: 
         chdir: /home/nguyenquangminh/cdn_dashboard/
-        cmd: openresty -c nginx.conf -p /home/nguyenquangminh/cdn_dashboard/
+        cmd: openresty -c nginx.conf -p /home/nguyenquangminh/cdn_dashboard/ -s reload
+    - name: Running mongodb database
+      ansible.builtin.systemd:
+        name: mongod
+        state: started
+    
+    - name: Start redis server
+      ansible.builtin.command:
+        chdir: /home/nguyenquangminh/cdn_dashboard/
+        cmd: redis-server redis.conf
+      
