--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         listen 443 http2 ssl;
 
 
-        location ~ \.(jpeg)$ {
+        location ~ \.(jpeg|ico)$ {
             root static/;
             
         }
