--- a/deployment/reload_server.ansible.yaml
+++ b/deployment/reload_server.ansible.yaml
@@ -5,5 +5,5 @@
   tasks:
     - name: Reload openresty proxy server
       ansible.builtin.command: 
-        chdir: /home/nguyenquangminh/cdn_dashboard/
-        cmd: openresty -c nginx.conf -p /home/nguyenquangminh/cdn_dashboard/ -s reload
+        chdir: /opt/cdn_dashboard/
+        cmd: openresty -c nginx.conf -p /opt/cdn_dashboard/ -s reload
