--- a/deployment/synchronize_code.ansible.yaml
+++ b/deployment/synchronize_code.ansible.yaml
@@ -5,8 +5,8 @@
   tasks:
     - name: Pulling code from github
       ansible.builtin.git:
-        repo: https://NguyenQuangMinh0504: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@github.com/NguyenQuangMinh0504/cdn_dashboard.git
-        dest: /home/nguyenquangminh/cdn_dashboard/
+        repo: https://github.com/NguyenQuangMinh0504/cdn_dashboard
+        dest: /opt/cdn_dashboard/
         update: yes
         clone: yes
         force: yes
