--- a/deployment/install_necessary_package.ansible.yaml
+++ b/deployment/install_necessary_package.ansible.yaml
@@ -15,6 +15,10 @@
       ansible.builtin.apt:
         name:
           - python3-venv
+    - name: Install python pip module
+      ansible.builtin.apt:
+        name:
+          - python3-pip
 
     - name: Add openresty GPG key
       ansible.builtin.apt_key:
