--- a/deployment/install_necessary_package.ansible.yaml
+++ b/deployment/install_necessary_package.ansible.yaml
@@ -19,6 +19,12 @@
       ansible.builtin.apt:
         name:
           - python3-pip
+      
+    - name: Install virtual env through pip
+      ansible.builtin.pip:
+        name:
+          - virtualenv
+        executable: pip3
 
     - name: Add openresty GPG key
       ansible.builtin.apt_key:
