--- a/deployment/runserver.ansible.yaml
+++ b/deployment/runserver.ansible.yaml
@@ -14,8 +14,9 @@
       ignore_errors: yes
 
     - name: Find all process using port 8000
-      ansible.builtin.shell: "lsof -i -i:8000"
+      ansible.builtin.shell: "lsof -t -i:8000"
       register: processes_on_port
+      ignore_errors: yes
       
     - name: Stop all processes running on port 8000
       ansible.builtin.shell: "kill -9 {{ item }}"
