--- a/web_server/nginx.conf
+++ b/web_server/nginx.conf
@@ -16,13 +16,18 @@ http {
     }
 
     server {
+        server_name sapphirecdn.com;
         listen 443 http2 ssl;
-        location ~ \.(jpeg|ico)$ {
-            root static/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        location /static {
+            include mime.types;
+            root /var/www/sapphirecdn.com/;
         }
 
         location / {
-            proxy_pass http://localhost:8000;
+            proxy_pass http://web:8000;
         }
     }
 }
