--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,9 @@ services:
       - 6379:6379
     networks:
       - web_network
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
   web:
     build:
       context: .
