--- a/compose.yaml
+++ b/compose.yaml
@@ -7,14 +7,14 @@ services:
       - web_network
   
   redis:
-    image: redis
+    build:
+      context: databases
+      dockerfile: Dockerfile
     ports:
       - 6379:6379
     networks:
       - web_network
-    volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+
   web:
     build:
       context: .
